# kaboom

./: .gitignore  .gitmodules  CHANGELOG.txt  Makefile  README.md  build.sh
_history_/: Read_Me.txt
assets/: kaboom.desktop
codeblocks/: Game_Kaboom.cbp  Game_Kaboom.depend  Game_Kaboom.layout
game/: CMakeLists.txt
game/include/: Bomb.h  BombManager.h  Bomber.h  CreditsScene.h  GameBackground.h  MenuScene.h  Paddle.h  SplashScene.h  Version.h
game/src/: Bomb.cpp  BombManager.cpp  Bomber.cpp  CreditsScene.cpp  MenuScene.cpp  main.cpp
include/: Bomb.h  BombManager.h  Bomber.h  CreditsScene.h  GameBackground.h  GameKaboom_Utils.h  GameScene.h  GameScene_Constants.h  Game_Constants.h  MenuScene.h  Paddle.h  SplashScene.h  TurnInfo.h  Version.h  bomb.h  bomber.h  game.h  game_scene.h  game_textures.h  game_types.h  helpers.h  paddle.h  scene.h  sprite.h
lib/Lore/: CHANGELOG.txt  Lore.h
lib/Lore/include/: AssetsManager.h  Color.h  ErrorControl.h  Font.h  GameManager.h  GameObject.h  IDrawable.h  ITransformable.h  IUpdatable.h  InputManager.h  Lore_Utils.h  MathHelper.h  Rectangle.h  SDLHelpers.h  Scene.h  SoundManager.h  Sprite.h  Text.h  Texture.h  Vector2.h  WindowManager.h
lib/Lore/lib/CoreClock/: CHANGELOG.txt  Doxyfile  README.md  mainpage.dox  update_version.sh
lib/Lore/lib/CoreClock/include/: Clock.h  CoreClock.h  CoreClock_Utils.h
lib/Lore/lib/CoreClock/src/: Clock.cpp
lib/Lore/lib/CoreGame/: CHANGELOG.txt  Doxyfile  README.md  TODO.txt  mainpage.dox  update_version.sh
lib/Lore/lib/CoreGame/include/: CoreGame.h  CoreGame_Macros.h  CoreGame_Utils.h  Log.h  Status.h  StringUtils.h
lib/Lore/lib/CoreGame/include/Macros/: CoreGame_Assert.h  CoreGame_Callbacks.h  CoreGame_Disallow.h  CoreGame_OnlyInDebug.h  CoreGame_Singleton.h  CoreGame_Verify.h
lib/Lore/lib/CoreGame/src/: GameCore_Macros.cpp  Log.cpp  Status.cpp  StringUtils.cpp
lib/Lore/lib/CoreRandom/: CHANGELOG.txt  Doxyfile  README.md  mainpage.dox  update_version.sh
lib/Lore/lib/CoreRandom/include/: CoreRandom.h  CoreRandom_Utils.h  Random.h
lib/Lore/lib/CoreRandom/src/: Random.cpp
lib/Lore/src/: AssetsManager.cpp  Color.cpp  ErrorControl.cpp  Font.cpp  GameManager.cpp  GameObject.cpp  IDrawable.cpp  ITransformable.cpp  InputManager.cpp  MathHelper.cpp  Rectangle.cpp  SDLHelpers.cpp  SoundManager.cpp  Sprite.cpp  Text.cpp  Texture.cpp  Vector2.cpp  WindowManager.cpp
lib/Lore/src/private/include/: Log.h  Lore_Private_Utils.h
lib/Lore/src/private/src/: Log.cpp
qt_creator/: Game_Kaboom.files
scripts/: CMakeLists.txt  build.sh  bump_version.sh  generate_sprite_headers.py
site_info/: info
src/: Bomb.cpp  BombManager.cpp  Bomber.cpp  CreditsScene.cpp  GameBackground.cpp  GameScene.cpp  MenuScene.cpp  Paddle.cpp  SplashScene.cpp  bomb.c  bomber.c  game.c  game_scene.c  game_textures.c  helpers.c  main.c  main.cpp  paddle.c  sprite.c
